# learning-knowledge-base

./: .env.example  .gitignore  CHANGELOG.md  README.md  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts  一键启动说明.md  停止知识库.cmd  启动知识库.cmd
.github/workflows/: ci.yml
browser-extension/: README.md  content-bilibili.js  content-knowledge-base.js  manifest.json  service-worker.js  sidepanel.css  sidepanel.html  sidepanel.js
docs/: DESKTOP_DEVELOPMENT.md  DEVELOPMENT_PRINCIPLES.md  RELEASE_CHECKLIST.md  RELEASE_DEMO.md
docs/releases/: v0.1.0.md
media/: README.md
performance/: README.md
performance/baseline/: 2026-07-16-graph-after-d3.json  2026-07-16.json  2026-07-18-d2-projection-payload.json  2026-07-18-d2.json  2026-07-18-e0-final.json
performance/scripts/: baseline-utils.mjs  baseline-utils.node.mjs  browser-baseline.mjs  browser-baseline.node.mjs  bundle-baseline.mjs  (+3 more)
scripts/: capture-release-screenshots.mjs  e0-edge-fixtures.mjs  e0-edge-fixtures.test.mjs  e0-seed-edge-fixtures.mjs  e2e-server.mjs  e2e-server.test.mjs  local-ai-proxy.mjs  local-ai-proxy.test.mjs  local-server-control.mjs  local-server-control.test.mjs  local-server.mjs  local-server.test.mjs  release-demo-fixtures.mjs  release-demo-fixtures.test.mjs  release-version.test.mjs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_lifecycle.rs  app_paths.rs  desktop_ai_config.rs  desktop_baseline.rs  desktop_secret_store.rs  external_source_opener.rs  lib.rs  main.rs
(+199 files in other folders)
