[package]
name = "learning_knowledge_base"
version = "0.2.0"
description = "学习知识库 - local-first personal learning knowledge base"
authors = ["Learning Knowledge Base"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "learning_knowledge_base_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-single-instance = "2.4.3"
tauri-plugin-opener = "2.5.4"
url = "2"
